// Copyright 2019 Lightbend Inc.

syntax = "proto3";

package customer.domain;

// tag::domain[]
message CustomerState {
  string customer_id = 1;
  string email = 2;
  string name = 3;
  Address address = 4;
}

message Address {
  string street = 1;
  string city = 2;
}
// end::domain[]

// tag::events[]
message CustomerCreated {
  CustomerState customer = 1;
}

message CustomerNameChanged {
  string new_name = 1;
}
// end::events[]
